fix read more on mobile

--- a/app/assets/stylesheets/_partials/main/_media_queries.sass
+++ b/app/assets/stylesheets/_partials/main/_media_queries.sass
@@ -9,6 +9,8 @@
     margin: 0!important
   .login-form-wrap h4
     margin-bottom: 0!important
+  .benefit-item
+    height: auto!important
   .benefit-item header
     height: auto!important
     padding: 3% 2%!important
